--- a/tests/xrt/02_simple/CMakeLists.txt
+++ b/tests/xrt/02_simple/CMakeLists.txt
@@ -1,11 +1,11 @@
-set(TESTNAME "02_simple")
+find_package(pybind11 REQUIRED)
 
-add_executable(02_simple main.cpp)
-target_link_libraries(02_simple PRIVATE ${xrt_core_LIBRARY} ${xrt_coreutil_LIBRARY})
+set(TESTNAME mainpybind)
+pybind11_add_module(${TESTNAME}  main.cpp)
+target_link_libraries(${TESTNAME} PRIVATE ${xrt_core_LIBRARY} ${xrt_coreutil_LIBRARY})
+target_link_libraries(${TESTNAME} PRIVATE ${uuid_LIBRARY} pthread)
 
-if (NOT WIN32)
-  target_link_libraries(02_simple PRIVATE ${uuid_LIBRARY} pthread)
-endif(NOT WIN32)
+install(TARGETS ${TESTNAME}
+  LIBRARY DESTINATION ${INSTALL_DIR}/${TESTNAME})
 
-install(TARGETS 02_simple
-  RUNTIME DESTINATION ${INSTALL_DIR}/${TESTNAME})
+
