added initial split into device, kernel, bo

--- a/tests/xrt/CMakeLists.txt
+++ b/tests/xrt/CMakeLists.txt
@@ -48,6 +48,7 @@ add_subdirectory(04_swizzle)
 add_subdirectory(07_sequence)
 add_subdirectory(11_fp_mmult256)
 add_subdirectory(13_add_one)
+add_subdirectory(14_pyxrt)
 add_subdirectory(22_verify)
 add_subdirectory(100_ert_ncu)
 if (NOT WIN32)
