cleaned up cmake

--- a/tests/xrt/14_pyxrt/CMakeLists.txt
+++ b/tests/xrt/14_pyxrt/CMakeLists.txt
@@ -2,20 +2,12 @@ find_package(pybind11 REQUIRED)
 set(DESTNAME pyxrt)
 
 
-# list(APPEND HEADERS device kernel bo)
-list(APPEND HEADERS pyxrt)
-foreach(HEADER IN LISTS HEADERS)
+pybind11_add_module(pyxrt  pyxrt.cpp)
+target_link_libraries(pyxrt PRIVATE ${xrt_core_LIBRARY} ${xrt_coreutil_LIBRARY})
 
-  pybind11_add_module(${HEADER}  ${HEADER}.cpp)
-  target_link_libraries(${HEADER} PRIVATE ${xrt_core_LIBRARY} ${xrt_coreutil_LIBRARY})
+if (NOT WIN32)
+  target_link_libraries(pyxrt PRIVATE ${uuid_LIBRARY} pthread)
+endif(NOT WIN32)
 
-  if (NOT WIN32)
-    target_link_libraries(${HEADER} PRIVATE ${uuid_LIBRARY} pthread)
-  endif(NOT WIN32)
-
-  install(TARGETS ${HEADER}
-    LIBRARY DESTINATION ${INSTALL_DIR}/${DESTNAME})
-
-endforeach()
-
-
+install(TARGETS pyxrt
+  LIBRARY DESTINATION ${INSTALL_DIR}/${DESTNAME})
